--- a/html/services.html
+++ b/html/services.html
@@ -1,12 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Hii
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Services-Mikalto</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
+  <body>
+    <section class="my-5 container">
+      <p class="text-center">EXPERIENCE MATTERS</p>
+      <h3 class="text-center playfair-font">
+        Escape from the World see the experience before you <br />
+        feel it. Discover the luxury of Hotel Mikalto.
+      </h3>
+      <div
+        class="d-flex flex-column flex-md-row flex-wrap gap-5 justify-content-center mt-5"
+      >
+        <div class="experience-icons">
+          <img
+            src="../images/experience-wellness.jpg"
+            alt="Wellness"
+            class="w-100"
+          />
+          <p class="blue-color fs-4">WELLNESS</p>
+          <p>Dedicated to Wellness</p>
+          <p>
+            Aman's approach to wellness is focused on personalisation, privacy
+            and seclusion. Local spa rituals with indigenous ingredients, offer
+            a profoundly therapeutic touch, and a gentle sense of discovery.
+          </p>
+          <button class="bg-white border-0 px-0 blue-color">
+            Explore More <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+        <div class="experience-icons">
+          <img
+            src="../images/experience-travel.jpg"
+            alt="travel"
+            class="w-100"
+          />
+          <p class="blue-color fs-4">GIFT CARDS</p>
+          <p>The gift of future travel</p>
+          <p>
+            Share extraordinary experiences with the Aman E- Gift Card -
+            delivered instantly and offering memories that last a lifetime.
+          </p>
+          <button class="bg-white border-0 px-0 blue-color mt-5 pt-lg-1">
+            Explore More <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+        <div class="experience-icons">
+          <img src="../images/experience-spa.jpg" alt="spa" class="w-100" />
+          <p class="blue-color fs-4">MIKALTO SHOP</p>
+          <p>The spa experience from home</p>
+          <p>
+            Skincare and Spa supplements harness powerful natural ingredients to
+            provide balance and optimal wellbeing.
+          </p>
+          <button class="bg-white border-0 px-0 blue-color mt-5 pt-4 pt-lg-1">
+            Explore More <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+        <div class="experience-icons">
+          <img
+            src="../images/experience-adventure.jpg"
+            alt="adventure"
+            class="w-100"
+          />
+          <p class="blue-color fs-4">EXPERIENCE</p>
+          <p>Adventures in the Wild</p>
+          <p>
+            Skincare and Spa supplements harness powerful natural ingredients to
+            provide balance and optimal wellbeing.
+          </p>
+          <button class="bg-white border-0 px-0 blue-color mt-5">
+            Explore More <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+        <div class="experience-icons">
+          <img
+            src="../images/experience-hotel.jpg"
+            alt="adventure"
+            class="w-100"
+          />
+          <p class="blue-color fs-4">INTERIORS</p>
+          <p>Beautiful Hotel Interiors</p>
+          <p>
+            Skincare and Spa supplements harness powerful natural ingredients to
+            provide balance and optimal wellbeing.
+          </p>
+          <button class="bg-white border-0 px-0 blue-color">
+            Explore More <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+        <div class="experience-icons">
+          <img
+            src="../images/experience-bonfire.jpg"
+            alt="adventure"
+            class="w-100"
+          />
+          <p class="blue-color fs-4">BONFIRE</p>
+          <p>Perfect Nights</p>
+          <p>
+            Skincare and Spa supplements harness powerful natural ingredients to
+            provide balance and optimal wellbeing.
+          </p>
+          <button class="bg-white border-0 px-0 blue-color">
+            Explore More <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+        <div class="experience-icons">
+          <img
+            src="../images/experience-dining.jpg"
+            alt="adventure"
+            class="w-100"
+          />
+          <p class="blue-color fs-4">DINING</p>
+          <p>Great Dining Experience</p>
+          <p>
+            Skincare and Spa supplements harness powerful natural ingredients to
+            provide balance and optimal wellbeing.
+          </p>
+          <button class="bg-white border-0 px-0 blue-color">
+            Explore More <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+        <div class="experience-icons">
+          <img
+            src="../images/experience-hill.jpg"
+            alt="adventure"
+            class="w-100"
+          />
+          <p class="blue-color fs-4">EXPERIENCE</p>
+          <p>Adventures in the Wild</p>
+          <p>
+            Skincare and Spa supplements harness powerful natural ingredients to
+            provide balance and optimal wellbeing.
+          </p>
+          <button class="bg-white border-0 px-0 blue-color">
+            Explore More <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+      </div>
+      <p class="text-center mt-5">
+        <a
+          class="mx-auto bg-white blue-color px-5 py-1 text-decoration-none border border-primary"
+          href="index.html"
+        >
+          Back to Home Page
+        </a>
+      </p>
+    </section>
+    <!-- experience section ends  -->
+  </body>
 </html>
