--- a/html/index.html
+++ b/html/index.html
@@ -185,7 +185,9 @@
         >
           <p class="text-white-50">ELEGANCE AND COMFORT</p>
           <h2>Standart Room</h2>
-          <p class="text-white-50">From: <span class="fs-4 text-white">$150</span>/ night</p>
+          <p class="text-white-50">
+            From: <span class="fs-4 text-white">$150</span>/ night
+          </p>
           <p class="text-white-50">
             With wide and comfortable areas and daylight pouring in from the....
           </p>
@@ -210,7 +212,10 @@
           </button>
         </div>
         <div class="room-beds position-relative">
-          <button class="position-absolute top-50 rounded-5 px-3 py-2 border-0" onclick="previousRoom()">
+          <button
+            class="position-absolute top-50 rounded-5 px-3 py-2 border-0"
+            onclick="previousRoom()"
+          >
             <i class="fa-solid fa-angle-left"></i>
           </button>
           <img src="../images/queen-bed.jpg" alt="bed" class="w-100" />
@@ -228,7 +233,9 @@
         >
           <p class="text-white-50">ELEGANCE AND COMFORT</p>
           <h2>Delux Room</h2>
-          <p class="text-white-50">From: <span class="fs-4 text-white">$200</span>/ night</p>
+          <p class="text-white-50">
+            From: <span class="fs-4 text-white">$200</span>/ night
+          </p>
           <p class="text-white-50">
             With wide and comfortable areas and daylight pouring in from the....
           </p>
@@ -253,7 +260,10 @@
           </button>
         </div>
         <div class="room-beds position-relative">
-          <button class="position-absolute top-50 rounded-5 px-3 py-2 border-0" onclick="previousRoom()">
+          <button
+            class="position-absolute top-50 rounded-5 px-3 py-2 border-0"
+            onclick="previousRoom()"
+          >
             <i class="fa-solid fa-angle-left"></i>
           </button>
           <img src="../images/king-bed.jpg" alt="bed" class="w-100" />
@@ -271,7 +281,9 @@
         >
           <p class="text-white-50">ELEGANCE AND COMFORT</p>
           <h2>Normal Room</h2>
-          <p class="text-white-50">From: <span class="fs-4 text-white">$100</span>/ night</p>
+          <p class="text-white-50">
+            From: <span class="fs-4 text-white">$100</span>/ night
+          </p>
           <p class="text-white-50">
             With wide and comfortable areas and daylight pouring in from the....
           </p>
@@ -296,7 +308,10 @@
           </button>
         </div>
         <div class="room-beds position-relative">
-          <button class="position-absolute top-50 rounded-5 px-3 py-2 border-0" onclick="previousRoom()">
+          <button
+            class="position-absolute top-50 rounded-5 px-3 py-2 border-0"
+            onclick="previousRoom()"
+          >
             <i class="fa-solid fa-angle-left"></i>
           </button>
           <img src="../images/single-bed.jpg" alt="bed" class="w-100" />
