--- a/html/index.html
+++ b/html/index.html
@@ -687,7 +687,7 @@
 
     <!-- footer section starts  -->
     <footer
-      class="footer d-flex flex-column mt-5 text-white blue-background small-font"
+      class="footer d-flex flex-column mt-5 text-white blue-background small-font pt-5"
     >
       <div
         class="d-flex flex-wrap flex-xl-nowrap gap-3 justify-content-evenly p-2"
